--- a/web/app/static/welcome.html
+++ b/web/app/static/welcome.html
@@ -3,10 +3,26 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="static/css/moneytracker.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,900&display=swap" rel="stylesheet">
   <title>Welcome</title>
   <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 </head>
 <body>
-  <h1>Hello</h1>
+
+  <header>
+    <h2 class="logo">Money Tracker</h2>
+    <nav class="navigation">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Contact</a>
+      <button class="btnLogin-pop">Login</button>
+   
+    </nav>
+  </header>
+
 </body>
 </html>
