--- a/web/app/static/welcome.html
+++ b/web/app/static/welcome.html
@@ -19,9 +19,14 @@
       <a href="#">About</a>
       <a href="#">Services</a>
       <a href="#">Contact</a>
-      <button class="btnLogin-pop">Login</button>
+      <button href="#" id="login" class="btnLogin-pop">Loginnn</button>
     </nav>
   </header>
+  <script>
 
+    $("#login").click(function () {
+      window.location.href = "/login";
+   });
+  </script>
 </body>
 </html>
